fixed spacing thanks @strawdairy

--- a/css/custom/home.scss
+++ b/css/custom/home.scss
@@ -319,9 +319,19 @@ button.btn.btn-primary.btn-light {
 }
 
 button.btn.btn-primary.btn-light {
-    font-size: 1.15em;
+   font-size: 1.5em;
     letter-spacing: 0px;
+    line-height: 2em;
 }
+
+
+
+.list-group-item {
+    width: 100%;
+    margin: 1% !important;
+}
+
+
 
 }
 
